--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +15,83 @@
     <link rel="stylesheet" href="">
     <!--bootstrap css-->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <!--animat css-->
+    <link rel="stylesheet" href="css/animate.css">
     <!--css style-->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-   
+    <section id="home">
+        <div id="home-cover" class="bg-parallax animated fadeIn">
+            <div id="home-content-box">
+                <div id="home-content-inner">
+                    <div id="home-heading" class="animated zoomIn">
+                        <h3>Watch out
+                            <br> the modern website</h3>
+                    </div>
+                    <div id="home-btn" class="animated zoomIn">
+                        <a class="btn btn-lg btn-general btn-white" href="#work" role="button">View Our Work</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    
+    <!--Temeprary space-->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
 
 
     <!--JQuery-->
@@ -31,4 +101,5 @@
     <!--js-->
     <script src="js/custem.js"></script>
 </body>
+
 </html>
