--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--google icon-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
     <!--font awesome-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <!--bootstrap css-->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <!--animat css-->
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+    <!--Home section-->
     <section id="home">
         <div id="home-cover" class="bg-parallax animated fadeIn">
             <div id="home-content-box">
@@ -38,6 +38,92 @@
             </div>
         </div>
     </section>
+
+    <!--Services section-->
+    <div id="services">
+        <div class="content-box">
+            <div class="content-title wow fadeInDown" data-wow-duration="2s" data-wow-delay=".1s">
+                <h3>Services</h3>
+            </div>
+            <div class="content-title-underline"></div>
+
+            <!--Items-->
+            <div class="container">
+                <div class="row wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">
+                    <!--first col-->
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-paint-brush fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>web design</h3>
+                            </div>
+                            <div class="service-item-desc">
+                                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4"><div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-laptop fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>web development</h3>
+                            </div>
+                            <div class="service-item-desc">
+                                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div></div>
+                    <div class="col-md-4"><div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-tablet fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>mobile apps</h3>
+                            </div>
+                            <div class="service-item-desc">
+                                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div></div>
+                    <!--second col-->
+                    <div class="col-md-4"><div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-search fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>seo optizomtion</h3>
+                            </div>
+                            <div class="service-item-desc">
+                                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div></div>
+                    <div class="col-md-4"><div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-pencil-square-o fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>ux design</h3>
+                            </div>
+                            <div class="service-item-desc">
+                                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div></div>
+                    <div class="col-md-4"><div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-life-ring fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>support</h3>
+                            </div>
+                            <div class="service-item-desc">
+                                <p>Tamen fabulas id varias tamen qui nam enim.</p>
+                            </div>
+                        </div></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--Temeprary space-->
     <br>
@@ -98,6 +184,8 @@
     <script src="js/jquery.js"></script>
     <!--Bootstrap js-->
     <script src="js/bootstrap/bootstrap.min.js"></script>
+    <!--wow js-->
+    <script src="js/wow.min.js"></script>
     <!--js-->
     <script src="js/custem.js"></script>
 </body>
